<resources>
    <string name="app_name">EcoRoute</string>
    <string name="app_subtitle">Carbon commute calculator</string>
    <string name="label_distance">Distance traveled</string>
    <string name="hint_distance">e.g. 5.5</string>
    <string name="unit_km">km</string>
    <string name="label_transport">Transport mode</string>
    <string name="mode_walk_bike">Walk / Bike</string>
    <string name="mode_motorcycle">Motorcycle</string>
    <string name="mode_jeepney_bus">Jeepney / Bus</string>
    <string name="mode_car">Car</string>
    <string name="btn_calculate">Calculate</string>
    <string name="btn_reset">Reset</string>
    <string name="label_result">Your impact</string>
    <string name="hint_result">Enter a distance and mode to see estimated CO2.</string>
</resources>
